tests/fixtures/valid/crazy/builtins/print.py
# Valid print() calls
# Auto-generated by scripts/generate_tests.py

b0_print_int = print(1)
b1_print_float = print(1.0)
b2_print_bool = print(True)
b3_print_str = print("hello")
b4_print_bytes = print(b"hello")
b5_print_list = print([1, 2, 3])
b6_print_dict = print({"a": 1})
b7_print_set = print({1, 2, 3})
b8_print_none = print(None)

print("print() tests passed!")
